# DeCent-Pay

./: .gitignore  Cargo.toml  LICENSE  README.md  environments.toml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
contracts/decent-pay/: Cargo.toml
contracts/decent-pay/src/: admin.rs  escrow_core.rs  escrow_management.rs  lib.rs  marketplace.rs  ratings.rs  refund_system.rs  storage_types.rs  work_lifecycle.rs
public/: manifest.json
src/: App.tsx  index.css  main.tsx
src/components/: ai-milestone-writer.tsx  eoa-balance.tsx  milestone-actions.tsx  milestone-approval-panel.tsx  navbar.tsx  notification-center.tsx  reputation-score.tsx  theme-toggle.tsx  wallet-button.tsx
src/components/admin/: admin-header.tsx  admin-loading.tsx  admin-stats.tsx  contract-controls.tsx  dispute-resolution.tsx
src/components/approvals/: application-card.tsx  approvals-header.tsx  approvals-loading.tsx  approvals-stats.tsx  job-card.tsx
src/components/create/: milestones-step.tsx  review-step.tsx  (+1 more)
src/contexts/: delegation-context.tsx  notification-context.tsx  web3-context-refactored.tsx  web3-context.tsx
src/hooks/: use-admin-status.ts  use-admin.ts  use-appkit-sync.ts  use-escrow-actions.ts  use-escrows.ts  use-freelancer-status.ts  use-job-creator-status.ts  use-pending-approvals.ts  use-wallet-refactored.ts  useSubscription.ts
src/pages/: AdminPage.tsx  ApprovalsPage.tsx  CreatePage.tsx  DashboardPage.tsx  FreelancerPage.tsx  HomePage.tsx  JobsPage.tsx
src/providers/: WalletProvider.tsx
src/store/: wallet.store.ts
(+41 files in other folders)
