[package]
name = "DeCent-Pay"
description = "DeCent-Pay - Decentralized Escrow & Freelance Marketplace on Soroban"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[package.metadata.stellar]
# Set contract metadata for authors, homepage, and version based on the Cargo.toml package values
cargo_inherit = true 

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
